新进程读取输入流&优化命令执行